--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ env:
 
 jobs:
     Testing:
-        runs-on: ubuntu:latest
+        runs-on: ubuntu-latest
         steps:
           - name: Code checkout
             uses: actions/checkout@v4
