--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,16 +30,17 @@ jobs:
             
         # Run solar-scanner
           - name: SonarQube Scan
-            run: sonar-scanner
-                -Dsonar.host.url=${{ secrets.SONAR_URL }}
-                -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-                -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
-                -Dsonar.projectkey=${{ secrets.SONAR_PROJECT_KEY }}
-                -Dsonar.sources=src/
-                -Dsonar.junit.reportsPath=target/surefire-reports/
-                -Dsonar.jacoco.reportsPath=target/jacoco.exec
-                -Dsonar.java.checkstyle.reportPAths=target/checkstyle-result.xml
-                -Dsonar.java.binaries=target/test-classes/com/visualpathit/account
+            run: |
+              sonar-scanner \
+                -Dsonar.host.url=${{ secrets.SONAR_URL }} \
+                -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+                -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} \
+                -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
+                -Dsonar.sources=src/ \
+                -Dsonar.junit.reportsPath=target/surefire-reports/ \
+                -Dsonar.jacoco.reportsPath=target/jacoco.exec \
+                -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml \
+                -Dsonar.java.binaries=target/test-classes/com/visualpathit/account \
         
         # Check the Quality Gate status
           - name: SonarQube Quality Gate check
