--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,17 +18,17 @@ jobs:
           - name: Checkstyle
             run: mvn checkstyle:checkstyle
         
-        # Setup java 11 to be default (sonar-scanner requirement as of 5.x)
-          - name: Set java 11
+          # Setup Java 11 to be default (sonar-scanner requirement as of 5.x)
+          - name: Set Java 11
             uses: actions/setup-java@v3
             with:
-                distribution: 'temurin' #See 'Suppported distributions' for available'
+                distribution: 'temurin'
                 java-version: '11'
 
           - name: Setup SonarQube
             uses: warchant/setup-sonar-scanner@v7
             
-        # Run solar-scanner
+          # Run sonar-scanner
           - name: SonarQube Scan
             run: |
               sonar-scanner \
@@ -40,35 +40,13 @@ jobs:
                 -Dsonar.junit.reportsPath=target/surefire-reports/ \
                 -Dsonar.jacoco.reportsPath=target/jacoco.exec \
                 -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml \
-                -Dsonar.java.binaries=target/test-classes/com/visualpathit/account \
+                -Dsonar.java.binaries=target/test-classes/com/visualpathit/account
         
-        # Check the Quality Gate status
+          # Check the Quality Gate status
           - name: SonarQube Quality Gate check
             id: sonarqube-quality-gate-check
             uses: sonarsource/sonarqube-quality-gate-action@master
-            # Force to fail step after specific time
             timeout-minutes: 5
             env:
-                SONAR_TOKEN: ${{secrets.SONAR_TOKEN }}
-                SONAR_HOST_URL: ${{secrets.SONAR_URL }} #OPTIONAL
-  
-    BUILD_AND_PUBLISH:
-      needs: Testing
-      runs-on: ubuntu-latest
-      steps:
-        - name: Code checkout
-          uses: actions/checkout@v4
-
-        - name: upload image to ECR
-          uses: appleboy/docker-ecr-action@master
-          with:
-            access_key: ${{ secrets.aws_access_key_id }}
-            secret_key: ${{ secrets.aws_secret_access_key }}
-            registry: ${{ secrets.registry }}
-            cache_from: ${{ secrets.cache }}
-            repo: api-sample
-            region: ap-northeast-1
-            auto_tag: true
-            daemon_off: false
-            dockerfile: example/Dockerfile
-            context: example
+                SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+                SONAR_HOST_URL: ${{ secrets.SONAR_URL }} #OPTIONAL
