updates to build and publish

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,13 +61,13 @@ jobs:
         - name: Upload image to ECR
           uses: appleboy/docker-ecr-action@master
           with:
-            access_key: ${{ secrets.aws_access_key_id }}
-            secret_key: ${{ secrets.aws_secret_access_key }}
-            registry: ${{ secrets.registry }}
-            cache_from: ${{ secrets.cache }}
-            repo: api-sample
-            region: ap-northeast-1
-            auto_tag: true
+            access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            registry: ${{ secrets.REGISTRY }}
+            cache_from: ${{ env.ECR_REPOSITORY }}
+            repo: ${{ env.ECR_REPOSITORY }}
+            region: ${{ env.AWS_REGION }}
+            auto_tag: latest, ${{ github.run_number }}
             daemon_off: false
-            dockerfile: example/Dockerfile
-            context: example
+            dockerfile: ./Dockerfile
+            context: ./
