--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
             cache_from: ${{ env.ECR_REPOSITORY }}
             repo: ${{ env.ECR_REPOSITORY }}
             region: ${{ env.AWS_REGION }}
-            auto_tag: latest, ${{ github.run_number }}
+            tags: latest, ${{ github.run_number }}
             daemon_off: false
             dockerfile: ./Dockerfile
             context: ./
