--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,12 @@ jobs:
           run: cat ~/.kube/config
 
         - name: Login to ECR
-          run: kubectl create secret docker-registry regcred --docker-server=${{ secrets.REGISTRY }} --docker-username=AWS --docker-password=$(aws ecr get-login-password)
+          run: |
+            kubectl create secret docker-registry regcred \
+              --docker-server=${{ secrets.REGISTRY }} \
+              --docker-username=AWS \
+              --docker-password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }}) \
+              --dry-run=client -o yaml | kubectl apply -f -
 
         - name: Deploy Helm
           uses: bitovi/github-actions-deploy-eks-helm@v1.2.10
