--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,6 +89,10 @@ jobs:
         - name: Print config file
           run: cat ~/.kube/config
 
+        - name: Delete existing Docker registry secret (if exists)
+          run: |
+            kubectl delete secret regcred --ignore-not-found
+
         - name: Login to ECR
           run: |
             kubectl create secret docker-registry regcred \
