--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,11 +98,10 @@ jobs:
             kubectl create secret docker-registry regcred \
               --docker-server=${{ secrets.REGISTRY }} \
               --docker-username=AWS \
-              --docker-password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }}) \
-              --dry-run=client -o yaml | kubectl apply -f -
+              --docker-password=$(aws ecr get-login-password) \
 
         - name: Deploy Helm
-          uses: bitovi/github-actions-deploy-eks-helm@v1.2.10
+          uses: ccapell/action-deploy-eks-helm@v1.0.3
           with:
             aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
             aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
